Network Policies/al-nafi-internal.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels: 
    name: internal 
  name: internal 
  namespace: default 
spec: 
  containers: 
  - env: 
    - name: APP_NAME
      value: Internal Al-Nafi Application
    - name: BG_COLOR
      value: blue
    image: kodekloud/webapp-conntest
    name: internal 
    ports: 
    - containerPort: 8080
      protocol: TCP
