Network Policies/payroll-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels: 
    name: payroll 
  name: payroll 
  namespace: default 
spec: 
  containers: 
  - env: 
    - name: APP_NAME
      value: Payroll Application
    - name: BG_COLOR
      value: blue
    image: kodekloud/webapp-conntest
    name: payroll
    ports: 
    - containerPort: 8080
      protocol: TCP
