Network Policies/db-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: db-service
  namespace: default
spec: 
  ports: 
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector: 
    name: mysql
  type: ClusterIP
