Network Policies/external-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: external-service
  namespace: default
spec: 
  ports: 
  - nodePort: 30080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector: 
    name: external
  type: NodePort
